# localzero-csv-validator-v3

./: .gitignore  GEMINI.md  README.md  pack_code.sh
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts
app/src/components/editor/: FixPanel.tsx  IssuesPanel.tsx  RowDetailPanel.tsx
app/src/components/grid/: ColumnHeader.tsx  VirtualizedTable.tsx
app/src/components/layout/: AppHeader.tsx  StatusBar.tsx  StepIndicator.tsx
app/src/components/mechanic/: FixPanel.tsx  FixSidebar.tsx
app/src/components/ui/: badge.tsx  dialog.tsx  input.tsx  select.tsx
app/src/components/wizard/: Import.tsx  ImportHub.tsx  Mapping.tsx  SchemaArchitect.tsx  SchemaSelect.tsx
app/src/components/workspace/: ComplianceStepper.tsx  Layout.tsx  Sidebar.tsx  SystemVitalsHeader.tsx
app/src/contexts/: WorkspaceContext.tsx
app/src/hooks/: useDataStream.ts  useSchemaStorage.ts  useTriageLog.ts
app/src/lib/: auditGenerator.ts  columnNameHints.ts  issueGroups.ts  schemas.ts  storage.ts  workspaceDb.ts
app/src/workers/: data.worker.ts
core/: Cargo.toml
core/src/: lib.rs
core/src/engine/: bulk.rs  dataframe.rs  mechanic.rs  mod.rs  parser.rs  pii.rs  schema.rs
docs/: CLEANUP_PLAN.md  FULL_REWRITE_PLAN.md  PLAN_CHECKLIST.md  REVIEW_FIX_STAGE_GAP_ANALYSIS.md  SPRINT2_DISCOVERY_BULK_ACTIONS_AND_LOGIC.md  UI_UX_IMPROVEMENTS.md  VALIDATION_STANDARDS.md
scripts/: build-wasm.sh  generate_csv.py
