[package]
name = "localzero-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
# CHANGE THIS LINE from "50.0" to "53.0"
arrow = { version = "53.0", default-features = false, features = ["ffi"] }
csv = "1.3"
regex = "1.10"
chrono = "0.4"
lazy_static = "1.4"
