[package]
name = "localzero-core"
version = "0.1.0"
edition = "2021"
description = "LocalZero CSV validator core (WASM): parsing, validation, and bulk corrections"
repository = "https://github.com/localzero/localzero-csv-validator-v3"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
arrow = { version = "53.0", default-features = false, features = ["ffi"] }
csv = "1.3"
regex = "1.10"
chrono = "0.4"
lazy_static = "1.4"
email_address = "0.2"